--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
 
 <body>
     <header>
+        <nav class="navigation">
+            <div>
+                <h3 class="nav-title">G-3 Architects</h3>
+            </div>
+            <div class="nav-buttons">
+                <div>
+                    <a class="nav-button" href="">Home</a>
+                </div>
+                <div>
+                    <a class="nav-button" href="">About </a>
+                </div>
+                <div>
+                    <a class="nav-button" href="">Contact Us</a>
+                </div>
+                <div>
+                    <a class="nav-button" href="">Login</a>
+                </div>
+            </div>
 
+        </nav>
     </header>
     <main></main>
     <footer></footer>
