--- a/index.html
+++ b/index.html
@@ -12,24 +12,48 @@
 
 <body>
     <header>
-        <nav class="navigation">
-            <div>
-                <h3 class="nav-title">G-3 Architects</h3>
+        <nav>
+            <div class="nav">
+                <div class="navigation">
+                    <div>
+                        <h3 class="nav-title">G-3 Architects</h3>
+                    </div>
+                    <div class="nav-buttons">
+                        <div>
+                            <a class="nav-button" href="">Home</a>
+                        </div>
+                        <div>
+                            <a class="nav-button" href="">About </a>
+                        </div>
+                        <div>
+                            <a class="nav-button" href="">Contact Us</a>
+                        </div>
+                        <div>
+                            <a class="nav-button" href="">Login</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="navigation-description">
+                    <div>
+                        <div class="navigation-info">
+                            <h1 class="navigation-title">Brand New
+                                Group of Architects
+                            </h1>
+                            <p>You will be involved in new building designs, extensions, alterations, restorations and
+                                conservations
+                                from the earliest stages right through to completion. The goal is to match client's
+                                needs
+                                and to
+                                produce sustainable, functional and aesthetically pleasing designs.</p>
+                            <button>Explore Now</button>
+                        </div>
+                    </div>
+                    <div class="navigation-banner">
+                        <img src="images/banner.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div class="nav-buttons">
-                <div>
-                    <a class="nav-button" href="">Home</a>
-                </div>
-                <div>
-                    <a class="nav-button" href="">About </a>
-                </div>
-                <div>
-                    <a class="nav-button" href="">Contact Us</a>
-                </div>
-                <div>
-                    <a class="nav-button" href="">Login</a>
-                </div>
-            </div>
+
 
         </nav>
     </header>
