--- a/index.html
+++ b/index.html
@@ -57,7 +57,74 @@
 
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="quick-feature">
+            <div class="quick-banners">
+                <div class="banner">
+                    <img src="images/team1.png" alt="">
+                </div>
+                <div class="banner">
+                    <img src="images/team2.png" alt="">
+                </div>
+                <div class="banner">
+                    <img src="images/team3.png" alt="">
+                </div>
+                <div class="banner">
+                    <img src="images/team4.png" alt="">
+                </div>
+            </div>
+            <div class="quick-feature-description">
+                <h3><span class="gray">Quick list</span> <span class="black-bold">of Our</span> <span
+                        class="orange">Features</span></h3>
+                <p>What is a brief description for architecture?
+                    Architecture is the art and technique of designing and building, as distinguished from the skills
+                    associated with construction. </p>
+                <button>Explore More</button>
+            </div>
+        </div>
+        <section class="container">
+            <div class="loving-features">
+                <div class="loving-feature">
+                    <div class="feauture-1">
+                        <h3>Features you will love and enjoy</h3>
+                        <p>A feature is a unique quality or characteristic that something has. Real-life examples:
+                            Elaborately colored tail feathers are peacocks' most well-known feature</p>
+                    </div>
+                    <div class="feauture">
+                        <h4>Desktop & Mobile Version</h4>
+                        <p>A feature is a unique quality or characteristic that something has. Real-life examples:
+                            Elaborately colored tail feathers are peacocks' most well-known feature. Earth has many
+                            features, such as a particular atmosphere, abundance of water, and temperature that make it
+                            able to sustain life.</p>
+                    </div class="feauture">
+                    <div>
+                        <h4>Drag & Drop Builder</h4>
+                        <p>A feature is a unique quality or characteristic that something has. Real-life examples:
+                            Elaborately colored tail feathers are peacocks' most well-known feature. Earth has many
+                            features, such as a particular atmosphere, abundance of water, and temperature that make it
+                            able to sustain life.</p>
+                    </div>
+                    <div class="feauture">
+                        <h4>Awesome Modern Design</h4>
+                        <p>A feature is a unique quality or characteristic that something has. Real-life examples:
+                            Elaborately colored tail feathers are peacocks' most well-known feature. Earth has many
+                            features, such as a particular atmosphere, abundance of water, and temperature that make it
+                            able to sustain life.</p>
+                    </div>
+                    <div class="feauture">
+                        <h4>Super Easy to Edit</h4>
+                        <p>A feature is a unique quality or characteristic that something has. Real-life examples:
+                            Elaborately colored tail feathers are peacocks' most well-known feature. Earth has many
+                            features, such as a particular atmosphere, abundance of water, and temperature that make it
+                            able to sustain life.</p>
+                    </div>
+                </div>
+                <div class="loving-feature-banner">
+                    <img src="images/architect.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
